k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - placeholder.invalid
      secretName: wine-tls
  rules:
    - host: placeholder.invalid
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: wine-app
                port:
                  name: http
